--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ body {background-image: URL();							/*背景图片*/
 
 <div>
 
-<iframe name="iframe1" id="frm1" align="bottom" width="95%" height="650px" src="hos.html">
+<iframe name="iframe1" id="frm1" align="bottom" width="95%" height="650px" src="cloud.html">
 	
 </iframe>
 </div>
